Фик багов: статусность звонка, продолжительность звонка переведен в формат их секунд часы : минуты : секунды  на страницах плана и звонков у контролера, исправлен , с переходом Комментария контролера на след неделю на странице плана у контролера

--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
@@ -98,7 +98,7 @@
 
       <ng-container matColumnDef="duration">
         <th colspan="4" mat-header-cell *matHeaderCellDef>Время звонка</th>
-        <td colspan="4" mat-cell *matCellDef="let element" style="max-width: 300px">{{element.durations}} Сек</td>
+        <td colspan="4" mat-cell *matCellDef="let element" style="max-width: 300px">{{msToTime(element.durations)}}</td>
       </ng-container>
 
       <ng-container matColumnDef="date">
@@ -169,7 +169,7 @@
             </div>
             <div class="element-item title"><b>Название:</b> {{element.titleClient}}</div>
             <div class="element-item phone"><b>Номер телефона:</b>{{element.phone}}</div>
-            <div class="element-item duration"><b>Время звонка:</b>{{element.durations}} Сек</div>
+            <div class="element-item duration"><b>Время звонка:</b>{{msToTime(element.durations)}} Сек</div>
             <div class="element-item date"><b>Дата:</b>{{element.date}}</div>
             <div class="element-item comentCon">
               <b>Комментарий контролера:</b>
