Переделна связка таблиц на справочник; Добалена страница справочника + алгоритмы сохранения справочника + редактирование таблиц и опций справочника; добалены столбци в таблицу клиентов от справочника у менеджеров; Попвлена верстка таблиц и справочников у менеджеоров и администратора

--- a/WebUI/ClientApp/src/app/admin/admin.component.html
+++ b/WebUI/ClientApp/src/app/admin/admin.component.html
@@ -7,6 +7,7 @@
       <li><a [routerLink]="[ 'clients' ]" routerLinkActive="active">Клиенты</a></li>
       <li><a [routerLink]="[ 'managers' ]" routerLinkActive="active">Менеджеры</a></li>
       <li><a [routerLink]="[ 'workgroups' ]" routerLinkActive="active">Рабочие группы</a></li>
+      <li><a [routerLink]="[ 'directory' ]" routerLinkActive="active">Справочник</a></li>
       <li><a href="controler" routerLinkActive="active">Контроль</a></li>
     </ul>
   </nav>
