--- a/WebUI/ClientApp/src/app/manager-rm/reach-outcomes/components/reach-outcomes/reach-outcomes.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/reach-outcomes/components/reach-outcomes/reach-outcomes.component.html
@@ -1,27 +1,27 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
-    <mat-card-title class="card-title">Крупные Клиентны</mat-card-title>
+    <mat-card-title class="card-title">Крупные Клиенты</mat-card-title>
   </mat-card-header>
 
   <table mat-table [dataSource]="reachOutcomess">
 
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Название</th>
-      <td mat-cell *matCellDef="let element"  (dblclick)="OpenDialogResult(element.clientId)">{{element.nameClient}} </td>
+      <td mat-cell *matCellDef="let element" (dblclick)="OpenDialogResult(element.clientId)">{{element.nameClient}}</td>
     </ng-container>
 
     <ng-container matColumnDef="phone1">
       <th mat-header-cell *matHeaderCellDef>Номер телефона клиента</th>
-      <td mat-cell *matCellDef="let element" (dblclick)="OpenDialogResult(element.clientId)">{{element.phones[0]?.phone}}, {{element.phones[1]?.phone}}</td>
+      <td mat-cell *matCellDef="let element" (dblclick)="OpenDialogResult(element.clientId)"><input type="text" (focusout)="saveChangesPhones($event, element.phones[0]?.phone + ', ' + element.phones[1]?.phone, element.clientId)" value='{{element.phones[0]?.phone}}, {{element.phones[1]?.phone}}' /></td>
     </ng-container>
 
     <ng-container matColumnDef="contactName">
       <th mat-header-cell *matHeaderCellDef>Контактное лицо, должность</th>
-      <td mat-cell *matCellDef="let element"  (dblclick)="OpenDialogResult(element.clientId)">{{element.contactName}}, {{element.position}}</td>
+      <td mat-cell *matCellDef="let element" (dblclick)="OpenDialogResult(element.clientId)"><textarea (focusout)="saveChangesPosition($event, element.contactName + ', ' + element.position, element.clientId)" style="min-width:90%;min-height:50px;">{{element.contactName}}, {{element.position}}</textarea></td>
     </ng-container>
 
     <ng-container matColumnDef="weekPlanReg">
-      <th mat-header-cell *matHeaderCellDef>План RM</th>
+      <th mat-header-cell *matHeaderCellDef>План РM</th>
       <td mat-cell *matCellDef="let element" (dblclick)="OpenDialogResult(element.clientId)" title='{{element.weekPlanDtoReg?.plan}}'>{{getPlanDot(element.weekPlanDtoReg? element.weekPlanDtoReg.plan : "")}}</td>
     </ng-container>
 
